LPS-35720 - fix misaligned list under power user define permissions and align textboxlistentry-holder

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -53,10 +53,6 @@
 		outline-offset: -2px;
 	}
 
-	ul {
-		margin: 0 0 11px 0;
-	}
-
 	li {
 		line-height: 27px;
 	}
